--- a/src/app/components/main-nav/main-nav.component.html
+++ b/src/app/components/main-nav/main-nav.component.html
@@ -5,9 +5,10 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
+      <a mat-list-item href="#" routerLink="/">HOME</a>
+      <a mat-list-item href="#">SOBRE MI</a>
+      <a mat-list-item href="#">PROJECTOS</a>
+      <a mat-list-item routerLink="/contact">CONTACTO</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
