Establecemos la division por secciones que vamos a poner en nuesrta single page y realizamos diversas pruebas para establecer un video en el  hero como background

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,13 @@
 <div class="home">
-    <section class="secciones">
+    <section class="secciones hero">
+        
+        
+    </section>
+    <section class="secciones about">
     
     </section>
+    <section class="secciones proyectos">
     
+    </section>
+
 </div>
