--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -10,4 +10,14 @@
         position: sticky;
         top: 0;
     }
+    .hero {
+        background-color: papayawhip;
+
+    }
+    .about {
+        background-color: lightgrey;
+    }
+    .proyectos {
+        background-color: darkgrey;
+    }
 }
