Acabamos implementando una imagen estatica en lugar de un video como background del Hero

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,40 +1,6 @@
 <div class="home">
     <section class="secciones hero">
-        <div style="position: relative;">
-            <div style="left: 0px;
-                        position: absolute;
-                        top: 0px;
-                        
-                        height: 100%;
-                        width: 100%;
-                        
-                        overflow: hidden;">
-                <video style="object-fit: cover;
-                              
-                              left: 50%;
-                              position: absolute;
-                              top: 50%;
-                              transform: translate(-50%, -50%);
-                              
-                              width: 100%;"
-                              src="https://www.youtube.com/watch?v=F0UP2jQL_AA&t=4s">
-                </video>
-            </div>
-
-            <div style="left: 0px;
-                        position: absolute;
-                        top: 0px;
-                        
-                        height: 100%;
-                        width: 100%;
-                        
-                        align-items: center;
-                        display: flex;
-                        flex-direction: column;
-                        justify-content: center;">
-                Una Nueva Experiencia
-            </div>
-        </div>
+        <div></div>
     </section>
     <section class="secciones about">
     
