--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -12,6 +12,23 @@
     }
     .hero {
         background-color: papayawhip;
+        &>div {
+            /* Center the content */
+            align-items: center;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+            /* Take full size */
+            height: 100vh;
+            width: 100%;
+
+            /* Background */
+            background-image: url("/assets/images/background.jpg");
+            background-position: center center;
+            background-size: cover;
+            background-repeat: no-repeat;
+        }
     }
     .about {
         background-color: lightgrey;
