Como los proyectos tienen su propio componente, enlazamos el componente especifico de los proyectos con la home para poder trabajar los estilos del componente dentro de su propio Ssas

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,7 +6,7 @@
     
     </section>
     <section class="secciones proyectos">
-    
+        <app-list-projects></app-list-projects>
     </section>
 
 </div>
