--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,3 +37,4 @@ $CVFront-theme: mat-light-theme((
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+*{box-sizing: border-box;}
