--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,6 +7,9 @@
     </section>
     <section class="secciones proyectos">
         <app-list-projects></app-list-projects>
+        <app-list-projects></app-list-projects>
+        <app-list-projects></app-list-projects>
+        <app-list-projects></app-list-projects>
     </section>
 
 </div>
