Metemos estilos a los cards para hacernos una idea de como se representan

--- a/src/app/components/list-projects/list-projects.component.scss
+++ b/src/app/components/list-projects/list-projects.component.scss
@@ -1,11 +1,14 @@
-.list-project {
+.list-projects {
     display: flex;
     flex-wrap: wrap;
-    margin-left: -8px;
-    margin-right: -8px;
+    padding: 0 1%;
     .proyecto {
-        flex-basis: 25%;
+        flex-basis: 23%;
         padding-left: 8px;
         padding-right: 8px;
+        height: 100px;
+        background-color: tomato;
+        margin: 1%;
     }
 }
+
