--- a/src/app/components/list-projects/list-projects.component.scss
+++ b/src/app/components/list-projects/list-projects.component.scss
@@ -1,9 +1,9 @@
 .list-projects {
     display: flex;
     flex-wrap: wrap;
-    padding: 0 1%;
+    padding: 1%;
     .proyecto {
-        flex-basis: 23%;
+        flex-basis: 98%;
         padding-left: 8px;
         padding-right: 8px;
         height: 100px;
@@ -12,3 +12,20 @@
     }
 }
 
+@media (min-width: 768px)
+{
+    .list-projects {
+        .proyecto {
+            flex-basis: 48%;
+        }
+    }   
+}
+
+@media (min-width: 1120px)
+{
+    .list-projects {
+        .proyecto {
+            flex-basis: 31%;
+        }
+    }   
+}
