Creamos la estructura de las tarjetas de los proyectos

--- a/src/app/components/list-projects/list-projects.component.html
+++ b/src/app/components/list-projects/list-projects.component.html
@@ -1,3 +1,6 @@
 <div class="list-projects">
-    <div class="proyecto"></div>
+    <div class="proyecto">
+        <h2></h2>
+        <a [[routerLink]="['/projects']" ]></a>
+    </div>
 </div>
