--- a/src/app/components/list-projects/list-projects.component.html
+++ b/src/app/components/list-projects/list-projects.component.html
@@ -1,6 +1,6 @@
 <div class="list-projects">
-    <div class="proyecto">
-        <h2></h2>
-        <a [[routerLink]="['/projects']" ]></a>
+    <div class="proyecto" *ngFor="let proyecto of arrProyectos"> <!-- de este montamos el bucle -->
+        <h2>{{proyecto.titulo}}</h2>
+        <a [routerLink]="['/projects', proyecto._id]">Ver detalle</a>
     </div>
 </div>
