AQUI SI LE DAMOS ESTILOS A LOS BOTONES

--- a/src/app/components/list-projects/list-projects.component.scss
+++ b/src/app/components/list-projects/list-projects.component.scss
@@ -12,6 +12,24 @@
     }
 }
 
+.filtros{
+    width: 80%;
+    margin: 0 auto;
+    text-align: center;
+    ul{
+        list-style: none;
+        li{
+            display: inline-block;
+            padding: 10px;
+            background-color: black;
+            color: white;
+            cursor: pointer;
+            margin-left: 10px;
+            font-size: 120%;
+        }
+    }
+}
+
 @media (min-width: 768px)
 {
     .list-projects {
