--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,3 +38,8 @@ $CVFront-theme: mat-light-theme((
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 *{box-sizing: border-box;}
+img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
