--- a/src/app/components/view-project/view-project.component.html
+++ b/src/app/components/view-project/view-project.component.html
@@ -1,1 +1,17 @@
-<p>view-project works!</p>
+
+<div class="proyecto">
+    <!-- Image -->
+    <div class="image">
+        <img src="https://picsum.photos/seed/picsum/200/300">
+    </div>
+
+    <!-- Right side -->
+    <div class="content">
+        <h1>{{proyecto?.titulo}}</h1>
+        <p class="description" [innerHTML]="proyecto?.descripcion"></p>
+        <!-- este parrafo es un ejemplo de las dos formas que hay de invocar una cadena de string desde un array hacia el html -->
+        <!-- con las dos llaves "{{}}" o con el [innerHTML] -->
+        <a [href]="proyecto?.url" target="_blank">Ir al proyecto</a>
+        <!-- target="_blank" es para que nos abra la url indicada en una pestaña nueva y no nos saque de esta-->
+    </div> 
+</div> 
