Modificamos la ruta de la imagen de la vista en detalle (AUN NO ACABADO)

--- a/src/app/components/view-project/view-project.component.html
+++ b/src/app/components/view-project/view-project.component.html
@@ -2,7 +2,7 @@
 <div class="proyecto">
     <!-- Image -->
     <div class="image">
-        <img src="https://picsum.photos/seed/picsum/200/300">
+        <img src="../../../assets/images/business-1839876_1920.jpg">
     </div>
 
     <!-- Right side -->
