Metemos texto de relleno

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
         <div></div>
     </section>
     <section class="secciones about">
-    
+        <h2>Experiencia</h2>
     </section>
     <section class="secciones proyectos">
         <app-list-projects></app-list-projects>
