Incluimos en cada uno de los elementos que queremos utilizar como punto de ancla el atributo "fragment" para poder detectarlo desde el evento de la función "navigateTo"

--- a/src/app/components/main-nav/main-nav.component.html
+++ b/src/app/components/main-nav/main-nav.component.html
@@ -5,9 +5,9 @@
       <img src="" alt="">
     </div>
     <ul class="menu">
-      <li><a (click)="navigateTo($event)" [routerLink]="''">HOME</a></li>
-      <li><a (click)="navigateTo($event)" [routerLink]="''">SOBRE MI</a></li>
-      <li><a (click)="navigateTo($event)" [routerLink]="''">PROYECTOS</a></li>
+      <li><a (click)="navigateTo($event)" [routerLink]="''" fragment="hero">HOME</a></li>
+      <li><a (click)="navigateTo($event)" [routerLink]="''" fragment="about">SOBRE MI</a></li>
+      <li><a (click)="navigateTo($event)" [routerLink]="''" fragment="proyectos">PROYECTOS</a></li>
       <li><a [routerLink]="['/contact']">CONTACTO</a></li>
     </ul>
   </mat-sidenav>
