Colocamos identificadores en los lugares a los que queremos dirigirnos con el scrollIntoView

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,11 +1,15 @@
 <div class="home">
-    <section class="secciones hero">
-        <div></div>
+    <section id="hero" class="secciones hero">
+        <div class="inner">
+            <h2>Hola, soy Programador</h2>
+            <h1>Javier Luque Bernier</h1>
+            <p>.:FULLSTACK DEVELOPER:.</p>
+        </div>
     </section>
-    <section class="secciones about">
+    <section id="about" class="secciones about">
         <h2>Experiencia</h2>
     </section>
-    <section class="secciones proyectos">
+    <section id="proyectos" class="secciones proyectos">
         <app-list-projects></app-list-projects>
     </section>
 
