--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,3 +1,4 @@
+@import '../../../assets/partials/variables';
 .home {
     height: 100%;
     overflow: scroll;
@@ -24,10 +25,28 @@
             width: 100%;
 
             /* Background */
-            background-image: url("/assets/images/background.jpg");
+            background-image: url("/assets/images/peter-gombos.jpg");
             background-position: center center;
             background-size: cover;
             background-repeat: no-repeat;
+            h2 {
+                font: {
+                    size: 240%;
+                    family: $font_secundary;
+                }
+                color: white;
+            }
+            h1 {
+                font: {
+                    size: 300%;
+                    family: $font_secundary;
+                }
+                color: white;
+            }
+            p {
+                font-size: 140%;
+                color: white;
+            }
         }
     }
     .about {
