Damos cuerpo y estilos a la seccion de Experiencia que antes se llamaba About Me

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,9 +6,82 @@
             <p>.:FULLSTACK DEVELOPER:.</p>
         </div>
     </section>
-    <section id="about" class="secciones about">
-        <h2>Experiencia</h2>
+    <section id="experiencia" class="secciones about">
+        <div class="timeline">
+            <!-- Left vertical line -->
+            <div class="line">
+            </div>
+            <!-- The timeline items container -->
+            <ul class="listitems">
+                <!-- Each timeline item -->
+                <li>
+                    <!-- The circle and title -->
+                    <div>
+                        <!-- The circle -->
+                        <div class="circle">
+                        </div>
+
+                        <!-- The title -->
+                        <div class="title">
+                            Técnico en Imagen para el Diagnóstico en el hospital "Nuestra Señora de la Merced"
+                        </div>
+                    </div>
+
+                    <!-- The description -->
+                    <div class="description">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum ex nec turpis
+                        efficitur, nec egestas quam
+                        fringilla. Vestibulum eget elit et leo malesuada ullamcorper. Fusce varius, lacus in luctus
+                        vestibulum, lorem tellus
+                        varius turpis, vitae interdum ante nulla id mi. Aliquam in libero sollicitudin urna lobortis
+                        consequat in et ex. Cras ut
+                        volutpat neque, vitae tincidunt turpis. Vestibulum ante ipsum primis in faucibus orci luctus
+                        et ultrices posuere cubilia
+                        curae; Donec in tincidunt ligula, vel molestie ipsum. Curabitur sed mattis dui. Nulla in
+                        pharetra mauris. Maecenas
+                        laoreet facilisis metus, eget suscipit metus fermentum et. Donec mi ipsum, placerat vel nisl
+                        a, eleifend tempor tellus.
+                        Morbi quis mauris et urna dignissim rutrum.
+                    </div>
+                </li>
+
+                <!-- Repeat other items -->
+
+                <li>
+                    <!-- The circle and title -->
+                    <div>
+                        <!-- The circle -->
+                        <div class="circle">
+                        </div>
+
+                        <!-- The title -->
+                        <div class="title">
+                            Programador Junior Full Stack en Cauken
+                        </div>
+                    </div>
+
+                    <!-- The description -->
+                    <div class="description">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum ex nec turpis
+                        efficitur, nec egestas quam
+                        fringilla. Vestibulum eget elit et leo malesuada ullamcorper. Fusce varius, lacus in luctus
+                        vestibulum, lorem tellus
+                        varius turpis, vitae interdum ante nulla id mi. Aliquam in libero sollicitudin urna lobortis
+                        consequat in et ex. Cras ut
+                        volutpat neque, vitae tincidunt turpis. Vestibulum ante ipsum primis in faucibus orci luctus
+                        et ultrices posuere cubilia
+                        curae; Donec in tincidunt ligula, vel molestie ipsum. Curabitur sed mattis dui. Nulla in
+                        pharetra mauris. Maecenas
+                        laoreet facilisis metus, eget suscipit metus fermentum et. Donec mi ipsum, placerat vel nisl
+                        a, eleifend tempor tellus.
+                        Morbi quis mauris et urna dignissim rutrum.
+                    </div>
+                </li>
+
+            </ul>
+        </div>
     </section>
+
     <section id="proyectos" class="secciones proyectos">
         <app-list-projects></app-list-projects>
     </section>
