--- a/src/assets/partials/_variables.scss
+++ b/src/assets/partials/_variables.scss
@@ -1,5 +1,5 @@
 $font_primary: 'Roboto', sans-serif;
-$base_color: #2F4538;
-$acento: #efb810;
+$base_color: rgb(66, 85, 91);
+$acento: #ff9a26;
 $color_secondary: #27271f;
 $font_secundary: 'Handlee', cursive;
