Modificacion de estilos del SideBar para que tenga efectos al poner el cursor encima y demás

--- a/src/app/components/main-nav/main-nav.component.html
+++ b/src/app/components/main-nav/main-nav.component.html
@@ -6,7 +6,7 @@
     </div>
     <ul class="menu">
       <li><a (click)="navigateTo($event)" [routerLink]="''" fragment="hero">HOME</a></li>
-      <li><a (click)="navigateTo($event)" [routerLink]="''" fragment="about">SOBRE MI</a></li>
+      <li><a (click)="navigateTo($event)" [routerLink]="''" fragment="experiencia">EXPERIENCIA</a></li>
       <li><a (click)="navigateTo($event)" [routerLink]="''" fragment="proyectos">PROYECTOS</a></li>
       <li><a [routerLink]="['/contact']">CONTACTO</a></li>
     </ul>
