Nuevos intentos de solucionar el scrollIntoView hacia arriba

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
         <div class="inner">
             <h2>Hola, soy Programador</h2>
             <h1>Javier Luque Bernier</h1>
-            <p>.:FULLSTACK DEVELOPER:.</p>
+            <span class="title">.:FULLSTACK DEVELOPER:.</span>
         </div>
     </section>
     <section id="experiencia" class="secciones about">
