--- a/src/assets/partials/_variables.scss
+++ b/src/assets/partials/_variables.scss
@@ -1,5 +1,5 @@
-$font_primary: 'Roboto', sans-serif;
+$roboto: 'Roboto', sans-serif;
 $base_color: rgb(66, 85, 91);
 $acento: #ff9a26;
 $color_secondary: #27271f;
-$font_secundary: 'Handlee', cursive;
+$handlee: 'Handlee', cursive;
