Modificacion en la variablke de estilos general

--- a/src/assets/partials/_variables.scss
+++ b/src/assets/partials/_variables.scss
@@ -3,3 +3,4 @@ $base_color: rgb(66, 85, 91);
 $acento: #ff9a26;
 $color_secondary: #27271f;
 $handlee: 'Handlee', cursive;
+$color_terciary: #27272f
